--- a/src/styles.css
+++ b/src/styles.css
@@ -2,3 +2,12 @@
   font-family: sans-serif;
   text-align: center;
 }
+
+.UserOutput {
+  width: 60%;
+  padding: 16px;
+  margin: 16px;
+  border: "2px solid black";
+  background-color: #ccc;
+  text-align: center;
+}
